# schema_generator

./: .gitignore  LICENSE  pyproject.toml  readme.md
examples/: convert_files.py  generate_html.py  readme.md
examples/enums/: status.py
examples/models/: location_model.py  post_model.py  user_model.py
examples/schemas/: __init__.py  location_schemas.py  post_schemas.py  user_schemas.py
src/schema_generator/: __init__.py  base_schema.py  checkers.py  schema_attributes.py  schema_generator.py  t.py  utils.py  verifiers.py
src/schema_generator/converter/: convert.py
src/schema_generator/viewer/: generate.py  template.py
