[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema_generator"
version = "1.0.0"
description = "Python utility package for pydantic and sqlalchemy."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy_pydantic_orm",
    "pydantic",
    "sqlalchemy"
]

[project.urls]
"Homepage" = "https://github.com/Tikisoft/schema_generator"
"Bug Tracker" = "https://github.com/Tikisoft/schema_generator/issues"